Fixed Hamburger Nav Bar not showing

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -104,10 +104,6 @@ section {
       display: none;
   }
 
-  #hamburger-nav {
-      display: flex;
-  }
-
   #experience, .experience-details-container {
       margin-top: 2rem;
   }
